两次刷新问题

--- a/html/officialDocument.html
+++ b/html/officialDocument.html
@@ -144,8 +144,20 @@
 				}
 			});
 		}
+		var t1 = null;//这个设置为全局
 	//发文详情页
 	function loadIssuedocPage(str){
+		if (t1 == null){
+	        t1 = new Date().getTime();
+	    }else{       
+	        var t2 = new Date().getTime();
+	        if(t2 - t1 < 500){
+	            t1 = t2;
+	            return;
+	        }else{
+	            t1 = t2;
+	        }
+	    }
 		var docunid = $(str).data("unid");
 		var issuedoc = localStorage.getItem("issuedoc");
 		var oaurl = issuedoc+"/AppDoingView/"+docunid+"?opendocument&login";
@@ -156,6 +168,17 @@
 	}
 	//收文详情页
 	function loadReceivedocPage(str){
+		if (t1 == null){
+	        t1 = new Date().getTime();
+	    }else{       
+	        var t2 = new Date().getTime();
+	        if(t2 - t1 < 500){
+	            t1 = t2;
+	            return;
+	        }else{
+	            t1 = t2;
+	        }
+	    }
 		var docunid = $(str).data("unid");
 		var receivedoc = localStorage.getItem("receivedoc");
 		var oaurl = $.hori.getconfig().appServerHost+"view/oa/receivedocPage/"+receivedoc+"/AppDoingView/"+docunid+"?opendocument&login";
