* 调整首页分辨率适配

--- a/html/home2.html
+++ b/html/home2.html
@@ -23,26 +23,39 @@
 	margin-top: 15px
 }*/
 .ui-content{padding:5px;}
-@media  only screen and (min-width: 1070px) and (max-width: 1242px) {
+@media  only screen and (min-width: 1080px) and (max-width: 1242px) {
   .imgToDo {
-    width:12em;
-	height: 12em;
+    width: 10em;
+	height: 10em;
   }
   .divxs {
 		width: 33.333%;
-		margin-top: 50px
+		margin-top: 30px;
+		margin-bottom: 30px;
 	}
 } 
-@media  screen and (min-width: 400px) and (max-width: 800px) {
+
+@media  screen and (min-width: 720px) and (max-width: 1079px) {
+    .imgToDo {
+        width: 5.5em;
+        height:5.5em;
+    }
+    .divxs {
+        width: 33.333%;
+        margin-top: 20px;
+        margin-bottom: 30px;
+    }
+}
+
+@media  screen and (min-width: 400px) and (max-width: 719px) {
 	.imgToDo {
 		width: 5.5em;
 		height:5.5em;
-		margin-bottom: 30px;
 	}
 	.divxs {
 		width: 33.333%;
 		margin-top: 20px;
-		margin-bottom: 15px;
+		margin-bottom: 20px;
 	}
 }
 
