--- a/html/home.html
+++ b/html/home.html
@@ -27,7 +27,16 @@ function openmail(){
 		cherry.bridge.flushOperations();
 	}
 }
-
+function loadConnections() {
+	$.hori.runApp("com.ibm.lotus.connections.mobile1","com.ibm.lotus.connections.mobile.pages.LotusConnections",function(res) {
+		alert(res);
+		if (res == "true") {
+			console.log("启动Connections客户端");
+		} else {
+			alert("您没有安装Connections客户端，请安装后再试");
+		}
+	});
+}
 
 //气泡中待办数量
 function inittodos(){
@@ -122,9 +131,9 @@ var icount=0;
 		$.hori.showLoading();
 		createUser();
 		gcount = gcount + 1;
+		localStorage.setItem("taskVal","1");
 		var targetUrl = $.hori.getconfig().serverBaseUrl
-				+ "viewhome/html/task.html"
-
+				+ "viewhome/html/taskList.html"
 		$.hori.loadPage(encodeURI(targetUrl));
 
 	}
@@ -150,10 +159,7 @@ var icount=0;
 	//通讯录
 	function loadContact() {
 		$.hori.showLoading();
-		$.hori.loadPage($.hori.getconfig().serverBaseUrl
-				+ 'viewhome/html/contact.html',
-				$.hori.getconfig().serverBaseUrl
-						+ 'viewhome/xml/searchContact.xml')
+		$.hori.loadPage($.hori.getconfig().serverBaseUrl+ 'viewhome/html/contact.html','viewhome/xml/searchContact.xml')
 	}
 	//公文查阅
 	function officialDocument() {
@@ -167,17 +173,7 @@ var icount=0;
 		var targetUrl = $.hori.getconfig().serverBaseUrl+"viewhome/html/officialDocument.html"
 		$.hori.loadPage(encodeURI(targetUrl));
 	}
-	function loadConnections() {
-		$.hori.runApp("com.ibm.lotus.connections.mobile1",
-		"com.ibm.lotus.connections.mobile.pages.LotusConnections",
-		function(res) {
-		if (res == "true") {
-		console.log("启动Connections客户端");
-		} else {
-		alert("您没有安装Connections客户端，请安装后再试");
-		}
-		});
-		}
+	
 	//获取公文库
 	function getOfficialLibrary() {
 		var url = $.hori.getconfig().appServerHost+"view/oa/officialDocumentLibrary/Produce/WeboaConfig.nsf/GetGongWenByUser?openAgent&itcode=&data-result=text";
@@ -245,23 +241,23 @@ a {
 					<span style="color: #434343"><strong>待办任务</strong></span>
 				</div>
 				<div class="ui-block-b">
-					<a href="javascript:void(0)" onclick="loadDoneTaskList()" class="ui-link"> <img width="68" height="68" src="../assets/home/tel.png">
-					</a> <br> <span style="color: #434343"><strong>已办任务</strong></span>
-				</div>
-				<div class="ui-block-c">
 					<a href="javascript:void(0);" onclick="officialDocument()" class="ui-link"> <img width="68" height="68" src="../assets/home/mail.png">
 					</a> <br> <span style="color: #434343"><strong>公文查阅</strong></span>
+				</div>
+				<div class="ui-block-c">
+					<a href="javascript:void(0)" onclick="loadAnnouceList()" class="ui-link"> <img width="68" height="68" src="../assets/home/tel.png">
+					</a> <br> <span style="color: #434343"><strong>通知公告</strong></span>
 				</div>
 			</div>
 			<br>
 			<div class="ui-grid-b" id="divOne">
 				<div class="ui-block-a">
-					<a href="javascript:void(0)" onclick="loadAnnouceList()" class="ui-link"> <img width="68" height="68" src="../assets/home/tel.png">
-					</a> <br> <span style="color: #434343"><strong>通知公告</strong></span>
-				</div>
-				<div class="ui-block-b">
 					<a href="javascript:void(0)" onclick="loadContact()" class="ui-link"> <img width="68" height="68" src="../assets/home/tel.png">
 					</a> <br> <span style="color: #434343"><strong>电话查询</strong></span>
+				</div>
+				<div class="ui-block-b">
+					<a href="javascript:void(0)" onclick="loadConnections()" class="ui-link"> <img width="68" height="68" src="../assets/home/tel.png">
+					</a> <br> <span style="color: #434343"><strong>Connection</strong></span>
 				</div>
 				<div class="ui-block-c" id="divMail">
 					<a href="javascript:void(0);" onclick="openmail()" class="ui-link"> <img width="68" height="68" src="../assets/home/mail.png">
@@ -269,18 +265,6 @@ a {
 				</div>
 			</div>
 			<br>
-			<div class="ui-grid-b" id="divOne">
-				<div class="ui-block-a">
-					<a href="javascript:void(0)" onclick="loadConnections()" class="ui-link"> <img width="68" height="68" src="../assets/home/tel.png">
-					</a> <br> <span style="color: #434343"><strong>Connection</strong></span>
-				</div>
-				<div class="ui-block-b">
-					
-				</div>
-				<div class="ui-block-c">
-					
-				</div>
-			</div>
 		</div>
 	</div>
 
