--- a/html/taskList.html
+++ b/html/taskList.html
@@ -84,12 +84,13 @@
 			//localStorage.setItem("officialVal","1");
 			var onlist=localStorage.getItem("taskVal");
 			if(onlist=="1"){
-				$("#ui-id-1").click()	
+				$("#ui-id-1").click();
+				getTodoTaskList();
 			}
 			if(onlist=="2"){
 				$("#ui-id-2").click()	
 			}
-			getTodoTaskList();
+			
 		})
 	</script>
 	<script type="text/javascript">
@@ -150,6 +151,50 @@
 					$.hori.hideLoading();
 				}
 			});
+		}
+		
+		var t1 = null;//这个设置为全局
+		function loadTodoPageForm(str){
+		localStorage.setItem("taskVal","1");
+			if (t1 == null){
+				t1 = new Date().getTime();
+			}else{       
+				var t2 = new Date().getTime();
+				if(t2 - t1 < 500){
+					t1 = t2;
+					return;
+				}else{
+					t1 = t2;
+				}
+			}
+			var docunid = $(str).data("unid");
+			var oaurl = "/Produce/DigiFlowMobile.nsf/showform?openform&login&apptype=msg&appserver="+oaMsgServer+"&appdbpath=DFMessage/dfmsg_"+itcode+".nsf&appdocunid="+docunid;
+			localStorage.setItem("oaDataSource",oaurl);
+			var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/appform.html";
+			targetURL=encodeURI(targetURL);
+			$.hori.loadPage(targetURL);
+		}
+
+		var y1 = null;//这个设置为全局
+		function loadDidPageForm(str){
+		localStorage.setItem("taskVal","2");
+			if (y1 == null){
+				y1 = new Date().getTime();
+			}else{       
+				var y2 = new Date().getTime();
+				if(y2 - y1 < 500){
+					y1 = y2;
+					return;
+				}else{
+					y1 = y2;
+				}
+			}
+			var docunid = $(str).data("unid");
+			var oaurl = "/Produce/DigiFlowMobile.nsf/showform?openform&login&apptype=msg&appserver="+oaMsgServer+"&appdbpath=DFMessage/dfmsg_"+itcode+".nsf&appdocunid="+docunid;
+			localStorage.setItem("oaDataSource",oaurl);
+			var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/taskDownAppform.html";
+			targetURL=encodeURI(targetURL);
+			$.hori.loadPage(targetURL);
 		}
 	</script>
 	<style>
