登陆验证是否是浏览器登陆以及收入利润趋势表bug修改

--- a/html/bi.html
+++ b/html/bi.html
@@ -110,17 +110,17 @@
   }
   .divxs {
 		width: 33.333%;
-		margin-top: 50px
+		margin-bottom: 50px
 	}
 } 
-@media  screen and (min-width: 400px) and (max-width: 800px) {
+@media  screen and (min-width: 350px) and (max-width: 800px) {
 	.imgToDo {
-		width: 5.5em;
-		height:5.5em;
+		width: 5em;
+		height:5em;
 	}
 	.divxs {
 		width: 33.333%;
-		margin-top: 20px
+		margin-bottom: 30px
 	}
 }
 
@@ -131,7 +131,7 @@
 	}
 	.divxs {
 		width: 33.333%;
-		margin-top: 20px
+		margin-bottom: 20px
 	}
 }  
 </style>
