--- a/html/bi/jyts.html
+++ b/html/bi/jyts.html
@@ -15,10 +15,32 @@
 <script src="../../lib/hori/hori.js?tag=21369"></script>
 <script src="../../lib/jquery-mobile/jquery.mobile.min.js"></script>
 <script src="../../config/web/config.js"></script>
+<script src="../../lib/knockout/knockout.js"></script>
+<script src="../../lib/knockout/knockout.mapping.js"></script>
 <style>
 a {
 	text-decoration: none;
 }
+
+@media only screen and (min-width: 1070px) and (max-width: 1242px) {
+	#month {
+		font-size: 17px;
+	}
+}
+
+@media screen and (min-width: 400px) and (max-width: 800px) {
+	#month {
+		font-size: 16px;
+	}
+}
+
+@media screen and (min-width: 310px) and (max-width: 330px) {
+	#month {
+		font-size: 15px;
+	}
+}
+
+
 </style>
 <script type="text/javascript">
 	$(document).ready(function() {
@@ -39,7 +61,7 @@ a {
 		soap += '</web:viewReportById>';
 		soap += ' </soapenv:Body></soapenv:Envelope>';
 		var data = "data-xml=" + soap;
-
+		var viewModel;
 		$.hori
 				.ajax({
 					"type" : "post",
@@ -48,6 +70,8 @@ a {
 					"success" : function(res) {
 						res = res.replace(/\s\s/g, "</p><p>");
 						var jsonObj = JSON.parse(res);
+						render(jsonObj);
+						$("#month").css('display', '');
 						document.getElementById("aa").innerHTML = jsonObj.reportdata.datatext;
 
 					},
@@ -57,6 +81,10 @@ a {
 					}
 				});
 	}
+	function render(parsedStr) {
+		viewModel = ko.mapping.fromJS(parsedStr);
+		ko.applyBindings(viewModel, document.getElementById('month'));
+	}
 </script>
 <style>
 p {
@@ -65,10 +93,15 @@ p {
 </style>
 </head>
 <body>
+
 	<!-- 经营态势 -->
 	<div data-role="page" id="srwc" class="login">
-		<div data-role="content" align="left" id="aa"
-			style="margin-left: 20px;font-size: 18px;"></div>
+		<div data-role="content" id='month' style="float: right; display: none;">
+			注：此经营数据截至<span data-bind="text: reportdata.year"></span>年<span
+				data-bind="text: reportdata.month"></span>月。
+		</div>
+		<div  align="left" id="aa"
+			style="margin-left: 20px; font-size: 18px;"></div>
 	</div>
 </body>
 </html>
