--- a/html/bi/lrbk.html
+++ b/html/bi/lrbk.html
@@ -15,14 +15,38 @@
 <script src="../../lib/jquery-mobile/jquery.mobile.min.js"></script>
 <script src="../asset/js/echarts-plain.js"></script>
 <script src="../../config/web/config.js"></script>
+<script src="../../lib/knockout/knockout.js"></script>
+<script src="../../lib/knockout/knockout.mapping.js"></script>
 <style>
 a {
 	text-decoration: none;
+}
+
+@media only screen and (min-width: 1070px) and (max-width: 1242px) {
+	#month {
+		font-size: 17px;
+	}
+}
+
+@media screen and (min-width: 400px) and (max-width: 800px) {
+	#month {
+		font-size: 16px;
+	}
+}
+
+@media screen and (min-width: 310px) and (max-width: 330px) {
+	#month {
+		font-size: 15px;
+	}
 }
 </style>
 
 </head>
 <body>
+	<div id='month' style="float: right; display:none;">
+		注：此经营数据截至<span data-bind="text: reportdata.year"></span>年<span
+			data-bind="text: reportdata.month"></span>月。
+	</div>
 	<!-- 利润板块-->
 	<div id="main" style="height: 400px; margin-top: 20px;"></div>
 	<script type="text/javascript">
@@ -44,6 +68,7 @@ a {
 			soap += '</web:viewReportById>';
 			soap += ' </soapenv:Body></soapenv:Envelope>';
 			var data = "data-xml=" + soap;
+			var viewModel;
 
 			$.hori.ajax({
 				"type" : "post",
@@ -59,6 +84,8 @@ a {
 					}
 					console.log(res);
 					var json = JSON.parse(res);
+					render(json);
+					$("#month").css('display', '');
 					var reportdata = json.reportdata;
 					var title = reportdata.title;
 					var year = reportdata.year;
@@ -75,6 +102,10 @@ a {
 					$.hori.hideLoading();
 				}
 			});
+		}
+		function render(parsedStr) {
+			viewModel = ko.mapping.fromJS(parsedStr);
+			ko.applyBindings(viewModel, document.getElementById('month'));
 		}
 		function loadlrbk(title, year, month, primaryunit, category,
 				seriesdata, fontSize) {
