--- a/html/bi/srwc.html
+++ b/html/bi/srwc.html
@@ -15,184 +15,212 @@
 <script src="../../lib/jquery-mobile/jquery.mobile.min.js"></script>
 <script src="../asset/js/echarts-plain.js"></script>
 <script src="../../config/web/config.js"></script>
+
+<script src="../../lib/knockout/knockout.js"></script>
+<script src="../../lib/knockout/knockout.mapping.js"></script>
 <style>
-a{
+a {
 	text-decoration: none;
 }
-@media  only screen and (min-width: 1242px) and (max-width: 1542px) {
-  #main {
-    height: 600px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-  }
-}
-@media  only screen and (min-width: 1070px) and (max-width: 1242px) {
-  #main {
-    height: 600px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-  }
-} 
-@media  screen and (min-width: 400px) and (max-width: 800px) {
+
+@media only screen and (min-width: 1242px) and (max-width: 1542px) {
 	#main {
-    height: 400px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-  }
+		height: 600px;
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+	#month {
+		font-size: 18px;
+		color: green;
+	}
+}
+
+@media only screen and (min-width: 1070px) and (max-width: 1242px) {
+	#main {
+		height: 600px;
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+	#month {
+		font-size: 17px;
+	}
+}
+
+@media screen and (min-width: 400px) and (max-width: 800px) {
+	#main {
+		height: 400px;
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+	#month {
+		font-size: 16px;
+	}
 }
 
 @media screen and (min-width: 310px) and (max-width: 330px) {
 	#main {
-    height: 400px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-  }
-}  
+		height: 400px;
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+	#month {
+		font-size: 15px;
+	}
+}
 </style>
+<script type="text/javascript">
+	$(document).ready(function() {
+		$.hori.setHeaderTitle("收入完成");
+		//加载收入完成图表数据
+		loadSrwcChart();
+	});
+	//加载收入完成图表数据
+	function loadSrwcChart() {
+		var url = $.hori.getconfig().appServerHost
+				+ "view/bi/loadSrwcChart/accsyBiReport/services/reqBiReportData";
+		var temp = "$lt;?xml version='1.0' encoding='utf-8'?$gt;$lt;root$gt;$lt;reportdata$gt;$lt;reportid$gt;11$lt;/reportid$gt;$lt;/reportdata$gt;$lt;/root$gt;";
+		var soap = "<soapenv:Envelope xmlns:soapenv='http://schemas.xmlsoap.org/soap/envelope/' xmlns:web='http://webservice.biz.digiwin.com'>";
+		soap += '<soapenv:Header/><soapenv:Body>';
+		soap += '<web:viewReportById>';
+		soap += '<web:in0>' + temp + '</web:in0>';
+		soap += '</web:viewReportById>';
+		soap += ' </soapenv:Body></soapenv:Envelope>';
+		var data = "data-xml=" + soap;
+		var viewModel;
+		$.hori.ajax({
+			"type" : "post",
+			"url" : url,
+			"data" : data,
+			"success" : function(res) {
+				console.log('res==' + res);
+				var json = JSON.parse(res);
+				render(json);
+				$("#month").css('display', '');
+				reportdata = json.reportdata;
+				var seriesname = reportdata.seriesname.split('|');
+				var seriesdata = reportdata.seriesdata.split('|');
+				var one = seriesdata[1] / seriesdata[0] - 0.1;
+				var two = seriesdata[2] / 100 + 0.1;
+				var srwc = seriesdata[1];
+				var b = seriesname[0] + ":" + seriesdata[0]
+						+ reportdata.primaryunit;
+				//document.getElementById("yusuan").innerHTML=b;
+				var c = seriesname[1] + ":" + seriesdata[1]
+						+ reportdata.primaryunit;
+				//document.getElementById("leiji").innerHTML=c;
+				var d = seriesname[2] + ":" + seriesdata[2] + "%";
+				//document.getElementById("bili").innerHTML=d;
+				var ww = (Math.ceil((seriesdata[0]) / 100)) * 100;
+				draw(ww, srwc, 0.6, 0.7, b + "\n" + c + "\n" + d);
+			},
+			"error" : function(res) {
+				alert("error:" + res);
+				$.hori.hideLoading();
+			}
+		});
+	}
+	function draw(ww, srwc, colorOne, colorTwo, title) {
+		var option = {
+			animation : false,
+			backgroundColor : "#EEF5F6",
+			title : {
+				text : title,
+				x : "center",
+				y : "bottom"
+			},
+			toolbox : {
+				show : false,
+				feature : {
+					mark : {
+						show : false
+					},
+					restore : {
+						show : false
+					},
+					saveAsImage : {
+						show : false
+					}
+				}
+			},
 
+			series : [ {
+				name : '收入完成',
+				type : 'gauge',
+				startAngle : 180,
+				endAngle : 0,
+				splitNumber : 4, // 分割段数，默认为5
+				max : ww,
+				radius : [ 0, '85%' ],
+				axisLine : { // 坐标轴线
+					lineStyle : { // 属性lineStyle控制线条样式
+						color : [ [ colorOne, '#FFCC66' ],
+								[ colorTwo, '#3399ff' ], [ 1, '#A066D3' ] ],
+						width : 50
+					}
+				},
+				axisTick : { // 坐标轴小标记
+					splitNumber : 10, // 每份split细分多少段
+					length : 4, // 属性length控制线长
+					lineStyle : { // 属性lineStyle控制线条样式
+						color : '#F5F5F5'
+					//color : '#292421'
+					}
+				},
+				axisLabel : { // 坐标轴文本标签，详见axis.axisLabel
+					textStyle : { // 其余属性默认使用全局文本样式，详见TEXTSTYLE
+						color : 'black',
+						fontWeight : 'bolder',
+						fontSize : 14
+					}
+				},
+				splitLine : { // 分隔线
+					show : true, // 默认显示，属性show控制显示与否
+					length : 10, // 属性length控制线长
+					lineStyle : { // 属性lineStyle（详见lineStyle）控制线条样式
+						color : '#00EEEE'
+					}
+				},
+
+				pointer : {
+					width : 5
+				},
+
+				detail : {
+					show : true,
+					formatter : '{value}亿元',
+					offsetCenter : [ 0, '30%' ],
+					textStyle : { // 其余属性默认使用全局文本样式，详见TEXTSTYLE
+						fontWeight : 'bolder'
+					}
+				},
+				data : [ {
+					value : 0,
+					name : ''
+				} ]
+			} ]
+		};
+		var myChart = echarts.init(document.getElementById('main'));
+		option.series[0].data[0].value = srwc;
+		myChart.setOption(option);
+	}
+	function render(parsedStr) {
+		viewModel = ko.mapping.fromJS(parsedStr);
+		ko.applyBindings(viewModel, document.getElementById('month'));
+	}
+</script>
 </head>
 <body>
-	<!-- 收入完成 -->
-	<div id="main">
-
+	<div id='month' style="float: right; display: none;">
+		注：此经营数据截至<span data-bind="text: reportdata.year"></span>年<span
+			data-bind="text: reportdata.month"></span>月。
 	</div>
+	<!-- 收入完成 -->
+	<div id="main"></div>
 	<div style="float: left; margin-left: 50px;">
 		<div id="yusuan" align="left" style="font-size: 1.3em;"></div>
 		<div id="leiji" align="left" style="font-size: 1.3em;"></div>
 		<div id="bili" align="left" style="font-size: 1.3em;"></div>
-		</div>
-		<script type="text/javascript">
-			$(document).ready(function() {
-				$.hori.setHeaderTitle("收入完成");
-				//加载收入完成图表数据
-				loadSrwcChart();
-			});
-			//加载收入完成图表数据
-			function loadSrwcChart() {
-				var url = $.hori.getconfig().appServerHost
-						+ "view/bi/loadSrwcChart/accsyBiReport/services/reqBiReportData";
-				var temp = "$lt;?xml version='1.0' encoding='utf-8'?$gt;$lt;root$gt;$lt;reportdata$gt;$lt;reportid$gt;11$lt;/reportid$gt;$lt;/reportdata$gt;$lt;/root$gt;";
-				var soap = "<soapenv:Envelope xmlns:soapenv='http://schemas.xmlsoap.org/soap/envelope/' xmlns:web='http://webservice.biz.digiwin.com'>";
-				soap += '<soapenv:Header/><soapenv:Body>';
-				soap += '<web:viewReportById>';
-				soap += '<web:in0>' + temp + '</web:in0>';
-				soap += '</web:viewReportById>';
-				soap += ' </soapenv:Body></soapenv:Envelope>';
-				var data = "data-xml=" + soap;
-				$.hori.ajax({
-					"type" : "post",
-					"url" : url,
-					"data" : data,
-					"success" : function(res) {
-						var json = JSON.parse(res);
-						reportdata = json.reportdata;
-						var seriesname = reportdata.seriesname.split('|');
-						var seriesdata = reportdata.seriesdata.split('|');
-						var one = seriesdata[1] / seriesdata[0] - 0.1;
-						var two = seriesdata[2] / 100 + 0.1;
-						var srwc = seriesdata[1];
-						var b = seriesname[0] + ":" + seriesdata[0]
-								+ reportdata.primaryunit;
-						//document.getElementById("yusuan").innerHTML=b;
-						var c = seriesname[1] + ":" + seriesdata[1]
-								+ reportdata.primaryunit;
-						//document.getElementById("leiji").innerHTML=c;
-						var d = seriesname[2] + ":" + seriesdata[2] + "%";
-						//document.getElementById("bili").innerHTML=d;
-						var ww = (Math.ceil((seriesdata[0]) / 100)) * 100;
-						draw(ww, srwc, 0.6, 0.7, b + "\n" + c + "\n" + d);
-					},
-					"error" : function(res) {
-						alert("error:" + res);
-						$.hori.hideLoading();
-					}
-				});
-			}
-			function draw(ww, srwc, colorOne, colorTwo, title) {
-				var option = {
-					animation : false,
-					backgroundColor : "#EEF5F6",
-					title : {
-						text : title,
-						x : "center",
-						y : "bottom"
-					},
-					toolbox : {
-						show : false,
-						feature : {
-							mark : {
-								show : false
-							},
-							restore : {
-								show : false
-							},
-							saveAsImage : {
-								show : false
-							}
-						}
-					},
+	</div>
 
-					series : [ {
-						name : '收入完成',
-						type : 'gauge',
-						startAngle : 180,
-						endAngle : 0,
-						splitNumber : 4, // 分割段数，默认为5
-						max : ww,
-						radius : [ 0, '85%' ],
-						axisLine : { // 坐标轴线
-							lineStyle : { // 属性lineStyle控制线条样式
-								color : [ [ colorOne, '#FFCC66' ],
-										[ colorTwo, '#3399ff' ],
-										[ 1, '#A066D3' ] ],
-								width : 50
-							}
-						},
-						axisTick : { // 坐标轴小标记
-							splitNumber : 10, // 每份split细分多少段
-							length : 4, // 属性length控制线长
-							lineStyle : { // 属性lineStyle控制线条样式
-								color : '#F5F5F5'
-							//color : '#292421'
-							}
-						},
-						axisLabel : { // 坐标轴文本标签，详见axis.axisLabel
-							textStyle : { // 其余属性默认使用全局文本样式，详见TEXTSTYLE
-								color : 'black',
-								fontWeight : 'bolder',
-								fontSize : 14
-							}
-						},
-						splitLine : { // 分隔线
-							show : true, // 默认显示，属性show控制显示与否
-							length : 10, // 属性length控制线长
-							lineStyle : { // 属性lineStyle（详见lineStyle）控制线条样式
-								color : '#00EEEE'
-							}
-						},
-
-						pointer : {
-							width : 5
-						},
-
-						detail : {
-							show : true,
-							formatter : '{value}亿元',
-							offsetCenter : [ 0, '30%' ],
-							textStyle : { // 其余属性默认使用全局文本样式，详见TEXTSTYLE
-								fontWeight : 'bolder'
-							}
-						},
-						data : [ {
-							value : 0,
-							name : ''
-						} ]
-					} ]
-				};
-				var myChart = echarts.init(document.getElementById('main'));
-				option.series[0].data[0].value = srwc;
-				myChart.setOption(option);
-			}
-		</script>
 </body>
 </html>
