九宫格 图片大小和间距适配

--- a/html/home2.html
+++ b/html/home2.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile.min.css" />
 <link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" />
 <link rel="stylesheet" href="../lib/app/home/css/home.css">
+<link rel="stylesheet" href="../lib/app/home/css/mediaQuery.css">
 <script src="../lib/jquery/jquery.min.js"></script>
 <script src="../lib/jquery-cookie/jquery.cookie.js"></script>
 <script src="../lib/encrypt/encrypt.js"></script>
@@ -23,52 +24,6 @@
 	margin-top: 15px
 }*/
 .ui-content{padding:5px;}
-@media  only screen and (min-width: 1080px) and (max-width: 1242px) {
-  .imgToDo {
-    width: 10em;
-	height: 10em;
-  }
-  .divxs {
-		width: 33.333%;
-		margin-top: 30px;
-		margin-bottom: 30px;
-	}
-} 
-
-@media  screen and (min-width: 720px) and (max-width: 1079px) {
-    .imgToDo {
-        width: 5.5em;
-        height:5.5em;
-    }
-    .divxs {
-        width: 33.333%;
-        margin-top: 20px;
-        margin-bottom: 30px;
-    }
-}
-
-@media  screen and (min-width: 400px) and (max-width: 719px) {
-	.imgToDo {
-		width: 5.5em;
-		height:5.5em;
-	}
-	.divxs {
-		width: 33.333%;
-		margin-top: 20px;
-		margin-bottom: 20px;
-	}
-}
-
-@media screen and (min-width: 310px) and (max-width: 330px) {
-	.imgToDo {
-		width: 3.6em;
-		height:3.6em;
-	}
-	.divxs {
-		width: 33.333%;
-		margin-top: 20px
-	}
-}  
 </style>
 </head>
 <body>
