--- a/html/officialDocument.html
+++ b/html/officialDocument.html
@@ -159,6 +159,7 @@
 	        }
 	    }
 		var docunid = $(str).data("unid");
+		localStorage.setItem("Issuedocdocunid",docunid);
 		var issuedoc = localStorage.getItem("issuedoc");
 		var oaurl =$.hori.getconfig().appServerHost+"view/oa/issuedocPage/"+issuedoc+"/AppDoingView/"+docunid+"?opendocument&login";
 // 		localStorage.setItem("oaDataSource",oaurl);
@@ -181,6 +182,7 @@
 	        }
 	    }
 		var docunid = $(str).data("unid");
+		localStorage.setItem("Receivedocdocunid",docunid);
 		var receivedoc = localStorage.getItem("receivedoc");
 		var oaurl = $.hori.getconfig().appServerHost+"view/oa/receivedocPage/"+receivedoc+"/AppDoingView/"+docunid+"?opendocument&login";
 		//localStorage.setItem("oaDataSource",oaurl);
