分辨率适配

--- a/html/bi/srlr.html
+++ b/html/bi/srlr.html
@@ -51,8 +51,8 @@ a {
 			data-bind="text: reportdata.month"></span>月。
 	</div>
 	<!-- 收入利润 -->
-	<div id="main" style="width: 450px; float: left;"></div>
-	<div id="main1" style="width: 450px; float: left;"></div>
+	<div id="main" style=" float: left;"></div>
+	<div id="main1" style=" float: left;"></div>
 	<script type="text/javascript">
 		window.onload = function() {
 			var h = document.documentElement.clientHeight / 2;//可见区域高度
