--- a/html/zcfgz.html
+++ b/html/zcfgz.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" />
 <link rel="stylesheet" href="../lib/swiper/idangerous.swiper.css">
 <link rel="stylesheet" href="../lib/app/home/css/news.css">
+<link rel="stylesheet" href="../lib/app/home/css/mediaQuery.css">
 <script src="../lib/jquery/jquery.min.js"></script>
 <script src="../lib/jquery-cookie/jquery.cookie.js"></script>
 <script src="../lib/encrypt/encrypt.js"></script>
@@ -44,37 +45,8 @@
 	width: 5em;
 	height: 5em;
 }
-@media  only screen and (min-width: 1070px) and (max-width: 1242px) {
-  .imgToDo {
-    width:12em;
-	height: 12em;
-  }
-  .divxs {
-		width: 33.333%;
-		margin-top: 50px
-	}
-} 
-@media  screen and (min-width: 400px) and (max-width: 800px) {
-	.imgToDo {
-		width: 5.5em;
-		height:5.5em;
-	}
-	.divxs {
-		width: 33.333%;
-		margin-top: 20px
-	}
-}
 
-@media screen and (min-width: 310px) and (max-width: 330px) {
-	.imgToDo {
-		width: 3.6em;
-		height:3.6em;
-	}
-	.divxs {
-		width: 33.333%;
-		margin-top: 20px
-	}
-}  
+
 </style>
 
 <body>
