--- a/html/bi.html
+++ b/html/bi.html
@@ -6,6 +6,7 @@
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0" />
 <link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile.min.css" />
 <link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" />
+<link rel="stylesheet" href="../lib/app/home/css/mediaQuery.css">
 <script src="../lib/jquery/jquery.min.js"></script>
 <script src="../lib/jquery-cookie/jquery.cookie.js"></script>
 <script src="../lib/encrypt/encrypt.js"></script>
@@ -103,37 +104,6 @@
 	width: 5em;
 	height: 5em;
 }
-@media  only screen and (min-width: 1070px) and (max-width: 1242px) {
-  .imgToDo {
-    width:12em;
-	height: 12em;
-  }
-  .divxs {
-		width: 33.333%;
-		margin-bottom: 50px
-	}
-} 
-@media  screen and (min-width: 350px) and (max-width: 800px) {
-	.imgToDo {
-		width: 5em;
-		height:5em;
-	}
-	.divxs {
-		width: 33.333%;
-		margin-bottom: 30px
-	}
-}
-
-@media screen and (min-width: 310px) and (max-width: 330px) {
-	.imgToDo {
-		width: 3.6em;
-		height:3.6em;
-	}
-	.divxs {
-		width: 33.333%;
-		margin-bottom: 20px
-	}
-}  
 </style>
 </head>
 <body>
