--- a/html/zcfgz.html
+++ b/html/zcfgz.html
@@ -54,16 +54,16 @@
 		<div data-role="content" align="center">
 
 			<div class="ui-grid-b" id="divOne">
-				<div class="ui-block-b">
+				<div class="ui-block-b divxs">
 					<a href="javascript:void(0);"
 						onClick="loadNewsList('GT_HomePage_SiteArea_aqsc')"> <img
-						id="imgToDo" class="imgToDo module-icon" src="../assets/home/aqhb.png" />
+						id="imgToDo" class="imgToDo module-icon imgToDo" src="../assets/home/aqhb.png" />
 					</a> <br /> <span style="color: #434343;"><strong>安全环保</strong></span>
 				</div>
-				<div class="ui-block-b">
+				<div class="ui-block-b divxs">
 					<a href="javascript:void(0);"
 						onClick="loadSafeList()"> <img
-						id="imgSearch" class="imgToDo module-icon" src="../assets/home/aqsc.png" />
+						id="imgToDo" class="imgToDo module-icon imgToDo" src="../assets/home/aqsc.png" />
 					</a> <br /> <span style="color: #434343;"><strong>安全生产值班表</strong></span>
 				</div>
 
