屏幕分辨率适配bug修改

--- a/html/zcfgz.html
+++ b/html/zcfgz.html
@@ -40,15 +40,6 @@
 </script>
 </head>
 
-<style>
-.module-icon {
-	width: 5em;
-	height: 5em;
-}
-
-
-</style>
-
 <body>
 	<div data-role="page" id="home">
 		<div data-role="content" align="center">
@@ -57,13 +48,13 @@
 				<div class="ui-block-b divxs">
 					<a href="javascript:void(0);"
 						onClick="loadNewsList('GT_HomePage_SiteArea_aqsc')"> <img
-						id="imgToDo" class="imgToDo module-icon imgToDo" src="../assets/home/aqhb.png" />
+						id="imgToDo" class="imgToDo " src="../assets/home/aqhb.png" />
 					</a> <br /> <span style="color: #434343;"><strong>安全环保</strong></span>
 				</div>
 				<div class="ui-block-b divxs">
 					<a href="javascript:void(0);"
 						onClick="loadSafeList()"> <img
-						id="imgToDo" class="imgToDo module-icon imgToDo" src="../assets/home/aqsc.png" />
+						id="imgToDo" class="imgToDo " src="../assets/home/aqsc.png" />
 					</a> <br /> <span style="color: #434343;"><strong>安全生产值班表</strong></span>
 				</div>
 
