--- a/html/jtxwz.html
+++ b/html/jtxwz.html
@@ -24,11 +24,6 @@ a {
 	text-decoration: none;
 }
 
-.module-icon {
-	width: 5em;
-	height: 5em;
-}
-
 </style>
 <script type="text/javascript">
 	$(document).ready(function() {
@@ -60,13 +55,13 @@ a {
 			<div class="ui-grid-b" id="divOne">
 				<div class="ui-block-b  divxs">
 					<a href="javascript:void(0);" onclick="loadTpxwList()"> <img
-						id="imgToDo" class="imgToDo module-icon imgToDo" src="../assets/home/tpxw.png" class="module-icon"/>
+						id="imgToDo" class="imgToDo " src="../assets/home/tpxw.png" class="module-icon"/>
 					</a> <br />
 					<span style="color: #434343;"><strong>图片新闻</strong></span>
 				</div>
 				<div class="ui-block-b  divxs">
 					<a href="javascript:void(0);" onclick="loadNewsList('GT_HomePage_SiteArea_jtxw')"> <img
-						id="imgSearch" class="imgToDo module-icon imgToDo"  src="../assets/home/jtxw.png" />
+						id="imgSearch" class="imgToDo "  src="../assets/home/jtxw.png" />
 					</a> <br />
 					<span style="color: #434343;"><strong>集团新闻</strong></span>
 				</div>
