解决720P风险状况折行、720P经营态势折行

--- a/html/bi/jyts.html
+++ b/html/bi/jyts.html
@@ -95,13 +95,13 @@ p {
 <body>
 
 	<!-- 经营态势 -->
-	<div data-role="page" id="srwc" class="login">
-		<div data-role="content" id='month' style="float: right; display: none;">
+	<div data-role="content" id="srwc" class="login">
+		<div  id='month' style="float: right; display: none;">
 			注：此经营数据截至<span data-bind="text: reportdata.year"></span>年<span
 				data-bind="text: reportdata.month"></span>月。
 		</div>
 		<div  align="left" id="aa"
-			style="margin-left: 20px; font-size: 18px;"></div>
+			style="margin-left: 20px; font-size: 20px;"></div>
 	</div>
 </body>
 </html>
