页面 分辨率匹配修改

--- a/html/bi.html
+++ b/html/bi.html
@@ -100,10 +100,7 @@
 	}
 </script>
 <style>
-.module-icon {
-	width: 5em;
-	height: 5em;
-}
+
 </style>
 </head>
 <body>
@@ -112,7 +109,7 @@
 		<div data-bind="foreach: list" style="width:100%;">
 			<div class="ui-block-b divxs">
 				<a  data-bind="click:loadBi" > <img
-					id="imgToDo" class="imgToDo module-icon" data-bind="attr:{'src':img}" class="module-icon"/>
+					id="imgToDo" class="imgToDo " data-bind="attr:{'src':img}" class="module-icon"/>
 				</a> <br /> 
 				<span style="color: #434343;" ><strong data-bind="text:title"></strong></span>
 			</div>
