--- a/html/login.html
+++ b/html/login.html
@@ -27,7 +27,10 @@ a {
 		//获取验证码
 		var loadBrower=$.hori.loadBrowerDebug();
 		if(loadBrower){//如果浏览器登陆
-		getCaptcha();
+			setTimeout(
+					function() {
+				getCaptcha();
+					},1000);
 		}
 		if (localStorage.getItem("data-saveusername") == "true") {
 			var username = localStorage.getItem("username");
