* 替换首页图片 * 修改登录验证码使用http协议

--- a/html/login.html
+++ b/html/login.html
@@ -82,7 +82,7 @@ a {
 		$("#captcha_id").val(captcha_id); //设置验证码id
 		$("#captchaImg").attr(
 				"src",
-				$.hori.getconfig().appServerHost
+				$.hori.getconfig().appServerHost2
 						+ "/servlet/captcha?captcha_id=" + captcha_id);
 	}
 	function clearData() {
