--- a/html/login.html
+++ b/html/login.html
@@ -86,7 +86,7 @@ a {
 		$("#captcha_id").val(captcha_id); //设置验证码id
 		$("#captchaImg").attr(
 				"src",
-				$.hori.getconfig().appServerHost
+				$.hori.getconfig().appServerHost2
 						+ "/servlet/captcha?captcha_id=" + captcha_id);
 	}
 	function clearData() {
